# rewerse-engineering

./: .gitignore  LICENSE  go.mod  readme.md
cgo/: exports.go
cmd/: cli.go  discounts.go  helpers.go  markets.go  platform_darwin.go  platform_linux.go  platform_windows.go  products.go  recipes.go
docs/: readme.md  rewerse-engineering.ps1
pkg/: api_test.go  basket.go  basket_structs.go  basket_structs_test.go  category_structs.go  category_structs_test.go  coupons.go  delivery.go  discounts.go  discounts_struct.go  discounts_struct_test.go  doc.go  market_structs.go  market_structs_test.go  markets.go  misc.go  misc_test.go  products.go  readme.md  recipe_structs.go  recipe_structs_test.go  recipes.go  shop_overview.go  shop_overview_structs.go  shop_overview_structs_test.go  util.go
pkg/testdata/: basket_create.json  discounts.json  market_details.json  market_search.json  missing.md  product_detail.json  product_search.json  product_suggestions.json  recalls.json  recipe_details.json  recipe_hub.json  recipe_popular_terms.json  recipe_search.json  service_portfolio.json  shop_overview.json
python/: README.md  build_lib.py  examples.py  pyproject.toml
python/rewerse/: __init__.py  _ffi.py
