[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewerse"
version = "0.1.0"
description = "Python bindings for the REWE mobile API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "cffi>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
rewerse = ["_lib/*.so", "_lib/*.dll", "_lib/*.dylib"]
